--- a/config.yaml
+++ b/config.yaml
@@ -1,37 +1,23 @@
-device:
-  name: "Huion Keydial Mini"
-  # address: "AA:BB:CC:DD:EE:FF"  # Optional: uncomment and set specific device address
+# Huion Keydial Mini Configuration
 
-bluetooth:
-  scan_timeout: 10.0
-  connection_timeout: 30.0
-  reconnect_attempts: 3
-
-uinput:
-  device_name: "Huion Keydial Mini"
+device_address: null  # Will auto-discover if not set
 
 key_mappings:
-  button_1: "KEY_F1"
-  button_2: "KEY_F2"
-  button_3: "KEY_F3"
-  button_4: "KEY_F4"
-  button_5: "KEY_F5"
-  button_6: "KEY_F6"
-  button_7: "KEY_F7"
-  button_8: "KEY_F8"
-  button_9: "KEY_F9"
-  button_10: "KEY_F10"
-  button_11: "KEY_F11"
-  button_12: "KEY_F12"
-  button_13: "KEY_1"
-  button_14: "KEY_2"
-  button_15: "KEY_3"
-  button_16: "KEY_4"
-  button_17: "KEY_5"
-  button_18: "KEY_6"
+  BUTTON_1: "KEY_F1"
+  BUTTON_2: "KEY_LEFTCTRL+KEY_C"
+  BUTTON_3: "KEY_A"
+  BUTTON_4: "KEY_B"
+  BUTTON_5: "KEY_VOLUMEUP"
+  BUTTON_6: "KEY_VOLUMEDOWN"
+  BUTTON_7: "KEY_ENTER"
+  BUTTON_8: "KEY_ESC"
 
 dial_settings:
+  clockwise_key: "KEY_RIGHT"
+  counterclockwise_key: "KEY_LEFT"
+  click_key: "KEY_SPACE"
   sensitivity: 1.0
-  clockwise_key: "KEY_VOLUMEUP"
-  counterclockwise_key: "KEY_VOLUMEDOWN"
-  click_key: "KEY_ENTER"
+
+uinput_device_name: "Huion Keydial Mini"
+connection_timeout: 10.0
+debug_mode: false
